$Id$

2018-08-19  Christian Franke  <franke@computer.org>

	ataprint.cpp, nvmeprint.cpp: Add JSON values 'power_cycle_count'
	and 'power_on_hours'.
	json.cpp, json.h: Add 'set_if_safe_*' member functions.

2018-08-13  Christian Franke  <franke@computer.org>

	ataprint.cpp: Add JSON support for '-l devstat'.
	Add JSON support also for old SCT Status format.

2018-08-10  Christian Franke  <franke@computer.org>

	smartctl.cpp, os_win32/wmiquery.h: Add missing printf() format checks.
	This also silences -Wformat-nonliteral warnings from clang++ 5.0.

	os_win32.cpp: Increase IOCTL_ATA_PASS_THROUGH timeout to 60 seconds.

2018-08-10  Zhdan Bybin  <zhdan.bybin@intel.com>

	drivedb.h:
	- Intel S3520 Series SSDs (#985)
	- Intel S4510/S4610/S4500/S4600 Series SSDs (#912, #928, #1000)

2018-08-04  Christian Franke  <franke@computer.org>

	Remove int64.h, use <inttypes.h> or <stdint.h> instead.

	configure.ac, utility.cpp, utility.h: Add 128-bit unsigned integer
	to string conversion.  Provides full integer precision if compiler
	supports '__int128' (e.g. x86_64 GCC and CLang).
	json.cpp, nvmeprint.cpp: Use these new functions.
	Makefile.am: Adjust config-vc14 target.

2018-08-02  Christian Franke  <franke@computer.org>

	scsicmds.h, scsiprint.cpp: Add support for SAS host managed drives
	(patch from #1045).

2018-08-01  Christian Franke  <franke@computer.org>

	dev_interface.cpp, scsiata.cpp, smartctl.8.in, smartd.conf.5.in:
	Add option '-d scsi+TYPE' to disable SAT auto detection.
	Useful in conjunction with TYPEs 'aacraid' and 'cciss' (#871).

2018-07-31  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Phison Driven SSDs: Kingston DC400 (#933, #1011), move GOODRAM to ...
	- Phison Driven OEM SSDs: ... here, PC Engines msata16d (#967),
	  INTENSO SATA III TOP (#1053)
	- USB: Iomega MDHD500-U (0x059b:0x0274) (#1003)
	- USB: Freecom (0x07ab:0xfc17) (#1049)
	- USB: JMicron JMS539 (0x152d:0x0539/0x2801) (patch from #970)
	- USB: JMicron (0x152d:0x0561) (#945)