@@ -71,9 +71,6 @@
     <ClCompile Include="..\..\json.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\wbemcli_small.h">
-      <Filter>os_win32</Filter>
-    </ClInclude>
     <ClInclude Include="..\wmiquery.h">
       <Filter>os_win32</Filter>
     </ClInclude>
